--- a/RipeNuget/RipeNuget.csproj
+++ b/RipeNuget/RipeNuget.csproj
@@ -4,6 +4,14 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PackageId>RipeClient</PackageId>
+        <Authors>Dmitriy Scherbakov</Authors>
+        <Description>.net core client to RIPE Database and hosted RPKI</Description>
+        <PackageProjectUrl>https://github.com/sherbacov/ripeclient</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/sherbacov/ripeclient/blob/master/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/sherbacov/ripeclient</RepositoryUrl>
+        <AssemblyVersion>1.0.0</AssemblyVersion>
+        <FileVersion>1.0.0</FileVersion>
     </PropertyGroup>
 
     <ItemGroup>
