--- a/RipeNuget/RipeNuget.csproj
+++ b/RipeNuget/RipeNuget.csproj
@@ -11,6 +11,7 @@
         <RepositoryUrl>https://github.com/sherbacov/ripeclient</RepositoryUrl>
         <AssemblyVersion>1.0.0</AssemblyVersion>
         <FileVersion>1.0.0</FileVersion>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <ItemGroup>
