--- a/RipeNuget/RipeNuget.csproj
+++ b/RipeNuget/RipeNuget.csproj
@@ -12,6 +12,7 @@
         <AssemblyVersion>1.0.1</AssemblyVersion>
         <FileVersion>1.0.1</FileVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageVersion>1.0.1</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
