--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
-        run: dotnet build -c Release --no-restore
+        run: dotnet build /p:AssemblyVersion=1.0.$GITHUB_RUN_NUMBER;FileVersion=1.0.$GITHUB_RUN_NUMBER;PackageVersion=1.0.$GITHUB_RUN_NUMBER -c Release --no-restore
       - name: Test
         run: dotnet test --no-build --verbosity normal
       - name: Publish Nuget
