--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
-        run: dotnet build /p:AssemblyVersion=1.0.${{github.run_number}};FileVersion=1.0.${{github.run_number}};PackageVersion=1.0.${{github.run_number}} -c Release --no-restore
+        run: dotnet build -c Release --no-restore /p:AssemblyVersion=1.0.${{github.run_number}};FileVersion=1.0.${{github.run_number}};PackageVersion=1.0.${{github.run_number}} 
       - name: Test
         run: dotnet test --no-build --verbosity normal
       - name: Publish Nuget
