Added Source Link https://docs.microsoft.com/en-us/dotnet/standard/library-guidance/sourcelink

--- a/src/ClientsRipe/ClientsRipe.csproj
+++ b/src/ClientsRipe/ClientsRipe.csproj
@@ -9,9 +9,17 @@
     <Authors>Dmitriy Scherbakov</Authors>
     <Description>.net core client to RIPE Database and hosted RPKI</Description>
 
+    <!-- Optional: Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+
+    <!-- Optional: Embed source files that are not tracked by the source control manager in the PDB -->
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <RepositoryUrl>https://github.com/sherbacov/ripeclient</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
