--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,8 @@ jobs:
         run: dotnet restore
       - name: Build
         run: dotnet build -c Release --no-restore /p:Version=1.0.${{github.run_number}};AssemblyVersion=1.0.${{github.run_number}};FileVersion=1.0.${{github.run_number}};PackageVersion=1.0.${{github.run_number}} 
-      - name: Test
-        run: dotnet test --no-build --verbosity normal
+#      - name: Test
+#        run: dotnet test --no-build --verbosity normal
       - name: Publish Nuget
         run: dotnet nuget push src/ClientsRipe/bin/Release/*.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
 
